# PracaDyplomowa

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
DataCollection/: RequestClass.py
presentation/api/: main.py
presentation/api/process/: controllers.py  schemas.py
source/Classes/: AnalysisClass.py  RequestClass.py  RequestInterface.py
source/DataCollection/: RequestDataCollection.py  RequestHander.py
source/NeuralNetwork/LSTMConfig/: LSTMconfig.json  Model.py  ModelService.py
