[project]
name = "PracaDyplomowa"
version = "0.0.1"

[tool.black]
line-length = 119
exclude = "venv"

[tool.flake8]
max-line-length = 119
exclude = ["venv"]
extend-ignore ="E203"

[tool.isort]
line_length = 119
profile="black"

[tool.mypy]
ignore_missing_imports = true
mypy_path = "."
warn_return_any = true
disallow_untyped_defs = true
plugins = "sqlalchemy.ext.mypy.plugin"
